--- a/hugo.toml
+++ b/hugo.toml
@@ -38,6 +38,23 @@ theme = 'hugo-book'
       BookPortableLinks = true
       BookServiceWorker = true
 
+  [languages.ru]
+    languageName = 'Русский'
+    languageCode = 'ru'
+    weight = 3
+    title = 'Book of Kiro'
+    contentDir = 'content.ru'
+    [languages.ru.params]
+      BookRepo = 'https://github.com/kiro-community/book-of-kiro'
+      BookEditPage = true
+      BookSearch = true
+      BookSection = '*'
+      BookMenuBundle = '/menu'
+      BookToC = true
+      BookComments = false
+      BookPortableLinks = true
+      BookServiceWorker = true
+
 [markup]
   [markup.goldmark]
     [markup.goldmark.renderer]
